--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "generate": "node src/generator.js"
+  },
   "dependencies": {
     "js-yaml": "^4.1.0",
     "mustache": "^4.2.0"
